--- a/05_FullStackMern/burke-craig-project-manager/client/package.json
+++ b/05_FullStackMern/burke-craig-project-manager/client/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.27.2",
     "moment": "^2.29.3",
     "react": "^17.0.2",
+    "react-currency-input-field": "^3.6.4",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.2",
     "react-scripts": "5.0.1",
